[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Tween/Tween.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Moving"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 773, 146 ), Vector2( 773, 346 ), Vector2( 773, 146 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 220, 144 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 773, 146 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Moving"
anims/Moving = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 34.0
margin_top = 354.0
margin_right = 402.0
margin_bottom = 422.0
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 217.0
margin_bottom = 20.0
toggle_mode = true
text = "Turn On _physics_process(delta)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 227.0
margin_right = 368.0
margin_bottom = 20.0
text = "Interpolate Callback"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GridContainer"]
margin_top = 24.0
margin_right = 217.0
margin_bottom = 44.0
text = "Interpolate Method"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="GridContainer"]
margin_left = 227.0
margin_top = 24.0
margin_right = 368.0
margin_bottom = 44.0
text = "Interpolate Property"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 36.0
margin_top = 449.0
margin_right = 140.0
margin_bottom = 484.0
text = "Reset Position"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 191.0
margin_top = 448.0
margin_right = 310.0
margin_bottom = 484.0
text = "Back To Main"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 450.0
margin_top = 354.0
margin_right = 541.0
margin_bottom = 368.0
text = "Printouts here"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="GridContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
